fix code block overflow width

--- a/jschat-next/app/glass.css
+++ b/jschat-next/app/glass.css
@@ -449,12 +449,12 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(131, 131, 131, 0.4);
   border-radius: 3px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(0, 0, 0, 0.18);
+  background: rgba(121, 121, 121, 0.6);
 }
 
 /* .dark ::-webkit-scrollbar-thumb {
